# TermProject

./: CMakeLists.txt  Final Main for files  Main file  PhaseThree.vcxproj  PhaseThree.vcxproj.filters  README.md  RainbowResults.txt  Term Project.cpp  Term Project.vcxproj  Term Project.vcxproj.filters  Transacation class  abstractSales.h  abstractsales.h  customer.h  customers.h  customers.txt  main.cpp  manager.h  menuDriven.vcxproj  menuDriven.vcxproj.filters  orders.h  orders.txt  rainbow.h  rainbowList.txt  sales.h  salesperson.h  superSales.h  supervisor.h  transaction.h  transactions.txt
